Moving GPUInfo's driver info to per GPU.

This is a better data structure. It enables us to record multiple driver info
and only applies the active GPU's driver info in blacklisting.

BUG=810713
TEST=gpu_unittests, manual on the AMD_switchable machine
R=kbr@chromium.org
TBR=jochen@chromium.org,piman@chromium.org

Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: I41ced8d2255eac2b05a4f5c099afb4bfc0713a0f
Reviewed-on: https://chromium-review.googlesource.com/1077560
Commit-Queue: Zhenyao Mo <zmo@chromium.org>
Reviewed-by: Zhenyao Mo <zmo@chromium.org>
Reviewed-by: Antoine Labour <piman@chromium.org>
Reviewed-by: Kenneth Russell <kbr@chromium.org>
Reviewed-by: Daniel Cheng <dcheng@chromium.org>
Cr-Commit-Position: refs/heads/master@{#563702}